--- a/bazadel/templates/includes/header.html
+++ b/bazadel/templates/includes/header.html
@@ -36,9 +36,9 @@
                     </button>
                     <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
-                            <a href="index.html" class="nav-item nav-link active text-secondary">Home</a>
+                            <a href="{% url 'posts:index' %}" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="about.html" class="nav-item nav-link">О нас</a>
-                            <a href="service.html" class="nav-item nav-link">Услуги</a>
+                            <a href="{% url 'posts:service' %}" class="nav-item nav-link">Услуги</a>
                             <a href="project.html" class="nav-item nav-link">Проекты</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Страницы</a>
