--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -319,7 +319,7 @@
                                   <img src="{% static 'img/team-4.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
                               </div>
                               <div class="team-name text-center py-3">
-                                  <h4 class="">Мартин Робертович</h4>
+                                  <h4 class="">Стефан Ильич</h4>
                                   <p class="m-0">Разработчик</p>
                               </div>
                               <div class="team-icon d-flex justify-content-center pb-4">
