--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -48,38 +48,7 @@
       <!-- Carousel End -->
 
 
-      <!-- Fact Start -->
-      <div class="container-fluid bg-secondary py-5">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-3 wow fadeIn" data-wow-delay=".1s">
-                      <div class="d-flex counter">
-                          <h1 class="me-3 text-primary counter-value">100</h1>
-                          <h5 class="text-white mt-1">процентно счастливый клиент</h5>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 wow fadeIn" data-wow-delay=".3s">
-                      <div class="d-flex counter">
-                          <h1 class="me-3 text-primary counter-value">25</h1>
-                          <h5 class="text-white mt-1">тысяч улучшенных бизнес-процессов</h5>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 wow fadeIn" data-wow-delay=".5s">
-                      <div class="d-flex counter">
-                          <h1 class="me-3 text-primary counter-value">120</h1>
-                          <h5 class="text-white mt-1">клиентов, которым нравится БазаДел</h5>
-                      </div>
-                  </div>
-                  <div class="col-lg-3 wow fadeIn" data-wow-delay=".7s">
-                      <div class="d-flex counter">
-                          <h1 class="me-3 text-primary counter-value">5</h1>
-                          <h5 class="text-white mt-1">отзывы довольных клиентов</h5>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Fact End -->
+      {% include 'includes/factstart.html' %}
 
 
       <!-- About Start -->
