--- a/bazadel/templates/includes/header.html
+++ b/bazadel/templates/includes/header.html
@@ -37,7 +37,7 @@
                     <div class="collapse navbar-collapse bg-transparent" id="navbarCollapse">
                         <div class="navbar-nav ms-auto mx-xl-auto p-0">
                             <a href="{% url 'posts:index' %}" class="nav-item nav-link active text-secondary">Home</a>
-                            <a href="about.html" class="nav-item nav-link">О нас</a>
+                            <a href="{% url 'posts:about' %}" class="nav-item nav-link">О компании</a>
                             <a href="{% url 'posts:service' %}" class="nav-item nav-link">Услуги</a>
                             <a href="project.html" class="nav-item nav-link">Проекты</a>
                             <div class="nav-item dropdown">
