--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -75,92 +75,8 @@
       </div>
       <!-- About End -->
 
+      {% include 'includes/services.html' %}
 
-      <!-- Services Start -->
-      <div class="container-fluid services py-5 mb-5">
-          <div class="container">
-              <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                  <h5 class="text-primary">Наши услуги</h5>
-                  <h1>Услуги, разработанные специально для вашего бизнеса</h1>
-              </div>
-              <div class="row g-5 services-inner">
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fa fa-file-code fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Разработка веб-сайтов</h4>
-                                  <p class="mb-4">Доверьте нам разработку Вашего веб-сайта и увидите, как он станет мощным инструментом для Вашего бизнеса.</p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fa fa-database fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Разработка баз данных</h4>
-                                  <p class="mb-4">Закажите разработку баз данных и повысьте эффективность своего бизнеса уже сегодня.</p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fa fa-paper-plane fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Приложения для Telegram</h4>
-                                  <p class="mb-4">Увеличьте свою видимость и привлекайте новых клиентов с помощью продвижения бизнеса в Telegram.</p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".3s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fas fa-external-link-alt fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Продвижение</h4>
-                                  <p class="mb-4">Мы предлагаем комплексные решения по продвижению Вашего бизнеса, используя современные технологии и стратегии.</p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                              
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".5s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fa  fa-life-ring fa-spin fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Анализ данных</h4>
-                                  <p class="mb-4">Максимизируйте потенциал Вашего бизнеса с помощью анализа клиентов, искусственного интеллекта! </p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-md-6 col-lg-4 wow fadeIn" data-wow-delay=".7s">
-                      <div class="services-item bg-light">
-                          <div class="p-4 text-center services-content">
-                              <div class="services-content-icon">
-                                  <i class="fas fa-laptop fa-7x mb-4 text-primary"></i>
-                                  <h4 class="mb-3">Проактивный сервис</h4>
-                                  <p class="mb-4">Мы предлагаем регулярное обслуживание и мониторинг систем, чтобы выявлять потенциальные проблемы заранее.</p>
-                                  <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Services End -->
 
 
       <!-- Project Start -->
@@ -215,114 +131,7 @@
       </div>
       <!-- Project End -->
 
-
-      <!-- Team Start -->
-      <div class="container-fluid py-5 mb-5 team">
-          <div class="container">
-              <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                  <h5 class="text-primary">Наш коллектив</h5>
-                  <h1>Познакомьтесь с нашей командой экспертов</h1>
-              </div>
-              <div class="owl-carousel team-carousel wow fadeIn" data-wow-delay=".5s">
-                  <div class="rounded team-item">
-                      <div class="team-content">
-                          <div class="team-img-icon">
-                              <div class="team-img rounded-circle">
-                                  <img src="{% static 'img/team-1.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
-                              </div>
-                              <div class="team-name text-center py-3">
-                                  <h4 class="">Светлана Юрьевна</h4>
-                                  <p class="m-0">Инженер данных</p>
-                              </div>
-                              <div class="team-icon d-flex justify-content-center pb-4">
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="rounded team-item">
-                      <div class="team-content">
-                          <div class="team-img-icon">
-                              <div class="team-img rounded-circle">
-                                  <img src="{% static 'img/team-2.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
-                              </div>
-                              <div class="team-name text-center py-3">
-                                  <h4 class="">Артем Михайлович</h4>
-                                  <p class="m-0">Web-разработчик</p>
-                              </div>
-                              <div class="team-icon d-flex justify-content-center pb-4">
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="rounded team-item">
-                      <div class="team-content">
-                          <div class="team-img-icon">
-                              <div class="team-img rounded-circle">
-                                  <img src="{% static 'img/team-3.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
-                              </div>
-                              <div class="team-name text-center py-3">
-                                  <h4 class="">Ксения Викторовна</h4>
-                                  <p class="m-0">Копирайтер</p>
-                              </div>
-                              <div class="team-icon d-flex justify-content-center pb-4">
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="rounded team-item">
-                      <div class="team-content">
-                          <div class="team-img-icon">
-                              <div class="team-img rounded-circle">
-                                  <img src="{% static 'img/team-4.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
-                              </div>
-                              <div class="team-name text-center py-3">
-                                  <h4 class="">Стефан Ильич</h4>
-                                  <p class="m-0">Разработчик</p>
-                              </div>
-                              <div class="team-icon d-flex justify-content-center pb-4">
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="rounded team-item">
-                      <div class="team-content">
-                          <div class="team-img-icon">
-                              <div class="team-img rounded-circle">
-                                  <img src="{% static 'img/team-5.jpg' %}" class="img-fluid w-100 rounded-circle" alt="">
-                              </div>
-                              <div class="team-name text-center py-3">
-                                  <h4 class="">Софья Алексеевна</h4>
-                                  <p class="m-0">Дизайнер</p>
-                              </div>
-                              <div class="team-icon d-flex justify-content-center pb-4">
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-facebook-f"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-twitter"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-instagram"></i></a>
-                                  <a class="btn btn-square btn-secondary text-white rounded-circle m-1" href=""><i class="fab fa-linkedin-in"></i></a>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <!-- Team End -->
+      {% include 'includes/team.html' %}
 
       <!-- Testimonial Start -->
       <div class="container-fluid testimonial py-5 mb-5">
