--- a/bazadel/templates/includes/header.html
+++ b/bazadel/templates/includes/header.html
@@ -39,7 +39,7 @@
                             <a href="{% url 'posts:index' %}" class="nav-item nav-link active text-secondary">Home</a>
                             <a href="{% url 'posts:about' %}" class="nav-item nav-link">О компании</a>
                             <a href="{% url 'posts:service' %}" class="nav-item nav-link">Услуги</a>
-                            <a href="project.html" class="nav-item nav-link">Проекты</a>
+                            <a href="{% url 'posts:learning' %}" class="nav-item nav-link">Обучение</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Страницы</a>
                                 <div class="dropdown-menu rounded">
