--- a/bazadel/templates/posts/service.html
+++ b/bazadel/templates/posts/service.html
@@ -8,9 +8,8 @@
         <div class="container-fluid px-0 py-2">
             <nav aria-label="breadcrumb animated slideInDown">
                 <ol class="breadcrumb justify-content-center mb-0">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Наши предложения</a></li>
-                    <li class="breadcrumb-item" aria-current="page">Сервисы</li>
+                    <li class="breadcrumb-item"><a href="{% url 'posts:index' %}" >Home</a></li>
+                    <li class="breadcrumb-item" aria-current="page">Услуги</li>
                 </ol>
             </nav>
     </div>
