--- a/bazadel/templates/includes/services.html
+++ b/bazadel/templates/includes/services.html
@@ -2,7 +2,7 @@
       <div class="container-fluid services py-5 mb-5">
         <div class="container">
             <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                <h5 class="text-primary">Наши услуги</h5>
+                <h5 class="text-primary">Наши предложения</h5>
                 <h1>Услуги, разработанные специально для вашего бизнеса</h1>
             </div>
             <div class="row g-5 services-inner">
