--- a/bazadel/templates/posts/about.html
+++ b/bazadel/templates/posts/about.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<!DOCTYPE html> 
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
 {% include 'includes/factstart.html' %}
 
+        <!-- Page Header Start -->
+        <div class="container-fluid px-0 py-2">
+            <nav aria-label="breadcrumb animated slideInDown">
+                <ol class="breadcrumb justify-content-center mb-0">
+                    <li class="breadcrumb-item"><a href="{% url 'posts:index' %}" >Home</a></li>
+                    <li class="breadcrumb-item" aria-current="page">О компании</li>
+                </ol>
+            </nav>
+    </div>
+    <!-- Page Header End -->
 
         <!-- About Start -->
         <div class="container-fluid py-5 my-5">
@@ -30,7 +39,5 @@
         </div>
         <!-- About End -->
 
-
         {% include 'includes/team.html' %}
-
 {% endblock %} 
