соглашение о перс данных

--- a/bazadel/templates/posts/learning.html
+++ b/bazadel/templates/posts/learning.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                         <h5 class="text-primary">Курсы повышения квалификации, тернинги, семинары</h5>
-                        <h1 class="mb-4">Не упускайте возможность стать экспертом в сфере информационных технологий.</h1>
+                        <h1 class="mb-4">Не упускайте возможность стать экспертом в сфере информационных технологий</h1>
                         <p> Стремитесь к профессиональному росту в сфере информационных технологий? Ищете идеальный способ повысить свою квалификацию и овладеть новыми навыками? Представляем Вам наши эксклюзивные ИТ курсы повышения квалификации, тренинги и семинары!</p>
                         <p class="mb-4">У нас Вы найдете широкий спектр обучающих программ, разработанных опытными профессионалами в сфере ИТ. Независимо от Вашего уровня знаний и опыта работы, мы поможем Вам раскрыть Ваш потенциал и достичь новых высот в карьере.</p>
                         <p class="mb-4">Наши курсы предлагают самые современные технологии и методики обучения, чтобы Вы могли максимально эффективно освоить новые навыки. Наши опытные преподаватели будут руководить Вами на каждом этапе обучения, обеспечивая Вам не только теоретические знания, но и практические навыки, необходимые для успешной работы в сфере ИТ.</p>
@@ -41,5 +41,6 @@
             </div>
         </div>
         <!-- Learning End -->
+        {% include 'includes/education.html' %}
 
 {% endblock %} 
