--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -182,9 +182,8 @@
       <div class="container-fluid py-5 mb-5">
           <div class="container">
               <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                  <h5 class="text-primary">Свяжитесь с нами</h5>
-                  <h1 class="mb-3">Обращайтесь по любым вопросам</h1>
-                  <p class="mb-2"> Контактная форма пока не работает<a href="https://htmlcodex.com/contact-form">Загрузить сейчас</a>.</p>
+                  <h5 class="text-primary">Если у вас есть вопросы об обучении или вы не знаете с чего начать свой цифровой бизнес, оставьте свой номер — мы позвоним, чтобы ответить на все ваши вопросы.</h5>
+                  <h1 class="mb-3">Обращайтесь, мы Вам поможем!</h1>
               </div>
               <div class="contact-detail position-relative p-5">
                   <div class="row g-5 mb-5 justify-content-center">
@@ -195,7 +194,7 @@
                               </div>
                               <div class="ms-3">
                                   <h4 class="text-primary">Адрес</h4>
-                                  <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Севастополь,ул.Университетская,31</a>
+                                  <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Севастополь,<br> ул.Университетская, 31</br></a>
                               </div>
                           </div>
                       </div>
@@ -217,7 +216,7 @@
                               </div>
                               <div class="ms-3">
                                   <h4 class="text-primary">Напишите нам</h4>
-                                  <a class="h5" href="mailto:master-cim@yandex.ru" target="_blank">master-cim@yandex.ru</a>
+                                  <a class="h5" href="mailto:master-cim@yandex.ru" target="_blank">basedeal@ya.ru</a>
                               </div>
                           </div>
                       </div>
@@ -234,7 +233,10 @@
                                   <input type="text" class="form-control border-0 py-3" placeholder="Ваше имя">
                               </div>
                               <div class="mb-4">
-                                  <input type="email" class="form-control border-0 py-3" placeholder="Ваш Email">
+                                <input type="email" class="form-control border-0 py-3" placeholder="Телефон">
+                            </div>
+                              <div class="mb-4">
+                                  <input type="email" class="form-control border-0 py-3" placeholder="Электронная почта">
                               </div>
                               <div class="mb-4">
                                   <input type="text" class="form-control border-0 py-3" placeholder="Проект/Задача">
@@ -245,6 +247,9 @@
                               <div class="text-start">
                                   <button class="btn bg-primary text-white py-3 px-5" type="button">Отправить сообщение</button>
                               </div>
+                              <div class="border-top mt-4 pt-3">
+                                <p class="mb-0">Нажимая на кнопку, Вы принимаете <a href="{% static 'doc/police.pdf' %}" class="text-white">пользовательское соглашение</a> и соглашаетесь на обработку ваших персональных данных на условиях политики конфиденциальности.</p>
+                            </div>
                           </div>
                       </div>
                   </div>
