кнопка отправки заявки работает

--- a/bazadel/templates/includes/form_order.html
+++ b/bazadel/templates/includes/form_order.html
@@ -89,7 +89,7 @@
                         {% endif %}
                         {% endfor %}
                         <div class="text-start">
-                          <button class="btn bg-primary text-white py-3 px-5" type="button">Отправить сообщение</button>
+                          <button class="btn bg-primary text-white py-3 px-5" type="submit">Отправить сообщение</button>
                         </div>
                         <div class="border-top mt-4 pt-3">
                           <p class="mb-0">
