--- a/bazadel/templates/includes/form_order.html
+++ b/bazadel/templates/includes/form_order.html
@@ -15,7 +15,7 @@
               </div>
               <div class="ms-3">
                 <h4 class="text-primary">Адрес</h4>
-                <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">Севастополь,ул.Университетская, 31</a>
+                <a href="https://goo.gl/maps/Zd4BCynmTb98ivUJ6" target="_blank" class="h5">ул.Университетская, 31</a>
               </div>
             </div>
           </div>
