--- a/bazadel/templates/includes/header.html
+++ b/bazadel/templates/includes/header.html
@@ -11,7 +11,7 @@
                 <div class="d-flex justify-content-between topbar">
                     <div class="top-info">
                         <small class="me-3 text-white-50"><a href="#"><i class="fas fa-map-marker-alt me-2 text-secondary"></i></a> Севастополь, ул. Университетская, 31</small>
-                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>master-cim@yandex.ru</small>
+                        <small class="me-3 text-white-50"><a href="#"><i class="fas fa-envelope me-2 text-secondary"></i></a>basedeal@yandex.ru</small>
                     </div>
                    
                     <div class="top-link">
