--- a/bazadel/templates/includes/form_order.html
+++ b/bazadel/templates/includes/form_order.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
         <h5 class="text-primary">Если у вас есть вопросы об обучении или вы не знаете с чего начать свой цифровой бизнес, оставьте свой номер — мы позвоним, чтобы ответить на все ваши вопросы.</h5>
-        <h1 class="mb-3">Обращайтесь, мы Вам поможем!</h1>
+        <h1 class="mb-3" id="form_order">Обращайтесь, мы Вам поможем!</h1>
       </div>
       <div class="contact-detail position-relative p-5">
         <div class="row g-5 mb-5 justify-content-center">
