--- a/bazadel/templates/includes/footer.html
+++ b/bazadel/templates/includes/footer.html
@@ -38,7 +38,7 @@
                         <div class="text-white mt-4 d-flex flex-column contact-link">
                             <a href="#" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Россия, Севастополь, ул. Университетская, 31</a>
                             <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +7 978 572 93 71</a>
-                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>master-cim@yandex.ru</a>
+                            <a href="#" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>basedeal@yandex.ru</a>
                         </div>
                     </div>
                 </div>
