--- a/bazadel/templates/includes/services.html
+++ b/bazadel/templates/includes/services.html
@@ -13,7 +13,7 @@
                                 <i class="fa fa-file-code fa-7x mb-4 text-primary"></i>
                                 <h4 class="mb-3">Разработка веб-сайтов</h4>
                                 <p class="mb-4">Доверьте нам разработку Вашего веб-сайта и увидите, как он станет мощным инструментом для Вашего бизнеса.</p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <a href="{% url 'posts:website' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                         </div>
                     </div>
