--- a/bazadel/templates/includes/education.html
+++ b/bazadel/templates/includes/education.html
@@ -2,8 +2,8 @@
  <!-- Learning Start -->
       <div class="container-fluid project py-5 mb-5">
         <div class="container">
-            <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 600px;">
-                <h5 class="text-primary">Обучение</h5>
+            <div class="text-center mx-auto pb-5 wow fadeIn" data-wow-delay=".3s" style="max-width: 700px;">
+                <h5 id="nav_edu" class="text-primary">Обучение</h5>
                 <h1>Курсы повышения квалификации, тернинги, семинары</h1>
             </div>
             <div class="row g-5">
