--- a/bazadel/templates/includes/services.html
+++ b/bazadel/templates/includes/services.html
@@ -25,7 +25,7 @@
                                 <i class="fa fa-database fa-7x mb-4 text-primary"></i>
                                 <h4 class="mb-3">Разработка баз данных</h4>
                                 <p class="mb-4">Закажите разработку баз данных и повысьте эффективность своего бизнеса уже сегодня.</p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <a href="{% url 'posts:database' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                         </div>
                     </div>
