--- a/bazadel/templates/posts/about.html
+++ b/bazadel/templates/posts/about.html
@@ -32,7 +32,7 @@
                         <h1 class="mb-4">Об агентстве БазаДел и его инновационных ИТ-решениях</h1>
                         <p> Уверенность в каждом шаге - это ключ к успеху, и мы готовы быть вашими надежными партнерами в аналитике и инженерии данных. Обратитесь к нам сегодня и начните преображение своего бизнеса!</p>
                         <p class="mb-4">Получите ценные инсайты, оптимизируйте стратегии и принимайте обоснованные решения на основе глубокого понимания Ваших клиентов.</p>
-                        <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">More Details</a>
+                        <a href="{% url 'posts:service' %}" class="btn btn-secondary rounded-pill px-5 py-3 text-white">Читать далее</a>
                     </div>
                 </div>
             </div>
