--- a/bazadel/templates/posts/learning.html
+++ b/bazadel/templates/posts/learning.html
@@ -35,7 +35,7 @@
                         <p class="mb-4">Наши курсы предлагают самые современные технологии и методики обучения, чтобы Вы могли максимально эффективно освоить новые навыки. Наши опытные преподаватели будут руководить Вами на каждом этапе обучения, обеспечивая Вам не только теоретические знания, но и практические навыки, необходимые для успешной работы в сфере ИТ.</p>
                         <p class="mb-4">Мы гордимся нашими результатами и успехами наших студентов. Многие из них уже нашли работу своей мечты или получили повышение в своей текущей компании благодаря нашим курсам. Присоединяйтесь к нашему сообществу успешных ИТ специалистов!</p>
                         <p class="mb-4">Не упускайте возможность стать экспертом в сфере информационных технологий. Запишитесь на наши ИТ курсы повышения квалификации, тренинги и семинары прямо сейчас и откройте новые горизонты возможностей для Вашей карьеры!" </p>
-                        <a href="" class="btn btn-secondary rounded-pill px-5 py-3 text-white">Читать далее</a>
+                        <a href="#nav_edu" class="btn btn-secondary rounded-pill px-5 py-3 text-white">Читать далее</a>
                     </div>
                 </div>
             </div>
