--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -18,7 +18,7 @@
                               <h1 class="text-white display-1 mb-4 animated fadeInRight">Агентство инновационных ИТ-решений</h1>
                               <p class="mb-4 text-white fs-5 animated fadeInDown">Мы воплощаем Ваши идеи в инновационных IT-решениях.</p>
                               <a href="{% url 'posts:about' %}" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Читать далее</button></a>
-                              <a href="#form_order" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Свяжитесь с нами</button></a>
+                              <a href="#nav_order" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Свяжитесь с нами</button></a>
                           </div>
                       </div>
                   </div>
