--- a/bazadel/templates/includes/services.html
+++ b/bazadel/templates/includes/services.html
@@ -37,7 +37,7 @@
                                 <i class="fa fa-paper-plane fa-7x mb-4 text-primary"></i>
                                 <h4 class="mb-3">Приложения для Telegram</h4>
                                 <p class="mb-4">Увеличьте свою видимость и привлекайте новых клиентов с помощью продвижения бизнеса в Telegram.</p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <a href="{% url 'posts:telega' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                                 <i class="fas fa-external-link-alt fa-7x mb-4 text-primary"></i>
                                 <h4 class="mb-3">Продвижение</h4>
                                 <p class="mb-4">Мы предлагаем комплексные решения по продвижению Вашего бизнеса, используя современные технологии и стратегии.</p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <a href="{% url 'posts:promotion' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                             
                         </div>
@@ -62,7 +62,7 @@
                                 <i class="fa  fa-life-ring fa-spin fa-7x mb-4 text-primary"></i>
                                 <h4 class="mb-3">Анализ данных</h4>
                                 <p class="mb-4">Максимизируйте потенциал Вашего бизнеса с помощью анализа клиентов, искусственного интеллекта! </p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <a href="{% url 'posts:analys' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                         </div>
                     </div>
