убрала проактивный сервис

--- a/bazadel/templates/includes/services.html
+++ b/bazadel/templates/includes/services.html
@@ -72,9 +72,9 @@
                         <div class="p-4 text-center services-content">
                             <div class="services-content-icon">
                                 <i class="fas fa-laptop fa-7x mb-4 text-primary"></i>
-                                <h4 class="mb-3">Проактивный сервис</h4>
-                                <p class="mb-4">Мы предлагаем регулярное обслуживание и мониторинг систем, чтобы выявлять потенциальные проблемы заранее.</p>
-                                <a href="" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
+                                <h4 class="mb-3">Обучение</h4>
+                                <p class="mb-4">Не откладывайте свое образование на потом - начните сегодня и откройте новые горизонты успеха!.</p>
+                                <a href="{% url 'posts:learning' %}" class="btn btn-secondary text-white px-5 py-3 rounded-pill">Читать далее</a>
                             </div>
                         </div>
                     </div>
