--- a/bazadel/templates/posts/analys.html
+++ b/bazadel/templates/posts/analys.html
@@ -30,32 +30,40 @@
                     </div>
                     <div class="col-lg-7 col-md-6 col-sm-12 wow fadeIn" data-wow-delay=".5s">
                         <h5 class="text-primary">
-                            Вам нужны точные и надежные данные для принятия стратегических решений? Хотите улучшить свои продукты и увеличить прибыль?  
+                            Вам нужны точные и надежные данные для принятия стратегических решений? Хотите улучшить свои бизнес-процессы и увеличить прибыль?  
                         </h5>
                         <h1 class="mb-4">
-                            Мы предлагаем Вам услуги профессиональной аналитики данных и продуктового анализа!
+                            Профессиональная аналитика, прогнозирование и оптимизация с помощью искусственного интеллекта!
                         </h1>
                         <p> 
-                            Наша команда экспертов в области аналитики данных обладает глубокими знаниями и многолетним опытом работы с различными бизнес-секторами. Мы готовы помочь Вам собрать, обработать и проанализировать большие объемы данных, чтобы Вы могли принимать обоснованные решения и достигать Ваших целей.
+                            Наша команда экспертов в области аналитики данных и искуственного интеллекта обладает глубокими знаниями и многолетним опытом работы с различными бизнес-секторами. Мы готовы помочь Вам собрать, обработать и проанализировать большие объемы данных, чтобы Вы могли принимать обоснованные решения и достигать, поставленных  целей.
                         </p>
+                        Предсказание будущих трендов и оптимизация бизнес-процессов стали ключевыми факторами успеха в современном мире. Искусственный интеллект – это технология, которая может превратить Ваши данные в ценные и практические знания. 
+                        <p>
+                        </p>    
                         <p class="mb-4">
                             Мы предлагаем широкий спектр услуг, включая:
                             <ul>
-                                <li>Сбор и структурирование данных</li>
-                                <li>Анализ и интерпретация данных</li>
-                                <li>Прогнозирование рейтингов продаж/li>
-                                <li>Разработка планов оптимизации и улучшения размещения продуктов</li>
-                                <li>Мониторинг и отслеживание покупательской активности</li>
+                                <li><a href="{% url 'posts:database' %}">Сбор и структурирование данных</a></li>
+                                <li>Анализ данных: Мы проводим детальный анализ Ваших данных, выявляем скрытые связи и паттерны, что позволяет предсказывать будущие тенденции и события.</li>
+                                <li>Прогнозирование: Мы используем передовые алгоритмы машинного обучения для создания точных прогнозов, помогая Вам принимать информированные решения и планировать свои действия.</li>
+                                <li>Оптимизация: Мы оптимизируем Ваши бизнес-процессы, улучшая эффективность и экономию ресурсов. Мы помогаем Вам максимизировать прибыль и минимизировать риски.</li>
                             </ul>    
                         </p>
+                        <p> Почему выбирают нас?</p>
+                        <ul>
+                            <li>Глубокое понимание Вашего бизнеса: Мы тщательно изучаем Вашу отрасль и учитываем Ваши специфические потребности, чтобы предоставить Вам наиболее релевантные решения.</li>
+                            <li>Инновационные технологии: Мы используем передовые методы и инструменты в области анализа данных и машинного обучения, чтобы обеспечить Вам точные и актуальные результаты.</li>
+                            <li>Гибкий подход: Мы адаптируемся к вашим требованиям и предоставляем индивидуальные решения, которые соответствуют вашим целям и бюджету.</li>
+                        </ul>
                         <p class="mb-4">
-                            Наш подход основан на глубоком понимании Вашего бизнеса и его особенностей. Мы тщательно анализируем данные, чтобы выделить ключевые тренды, понять потребности Вашей целевой аудитории и предложить эффективные стратегии для достижения успеха.
+                            Доверьте нам свои данные, и мы поможем Вам преодолеть сложности и достичь успеха.
                         </p>
                         <p class="mb-4">
                             Не упускайте возможность превратить данные в ценную информацию и преимущество для Вашего бизнеса.
                         </p>                      
                     <h5 class="text-primary">
-                        Обратитесь к нам сегодня и доверьте нам анализ данных и продуктовый анализ, чтобы вырасти и преуспеть в своей отрасли.
+                        Свяжитесь с нами прямо сейчас и начните использовать силу искусственного интеллекта для прогнозирования и оптимизации Вашего бизнеса!
                     </h5>
                     </div>
                 </div>
