--- a/bazadel/templates/includes/education.html
+++ b/bazadel/templates/includes/education.html
@@ -12,7 +12,7 @@
                         <div class="project-img">
                             <img src="{% static 'img/project-1.jpg' %}" class="img-fluid w-100 rounded" alt="">
                             <div class="project-content">
-                                <a href="#" class="text-center">
+                                <a href="{% url 'posts:eduweb' %}" class="text-center">
                                     <h4 class="text-secondary">Разработка веб-сайтов</h4>
                                     <p class="m-0 text-white">Создай сайт своими руками за 72 часа</p>
                                 </a>
@@ -25,7 +25,7 @@
                         <div class="project-img">
                             <img src="{% static 'img/project-2.jpg' %}" class="img-fluid w-100 rounded" alt="">
                             <div class="project-content">
-                                <a href="#" class="text-center">
+                                <a href="{% url 'posts:edudb' %}" class="text-center">
                                     <h4 class="text-secondary">Разработка баз данных</h4>
                                     <p class="m-0 text-white">Информационная система на PostgreSQL</p>
                                 </a>
@@ -38,9 +38,9 @@
                         <div class="project-img">
                             <img src="{% static 'img/project-3.jpg' %}" class="img-fluid w-100 rounded" alt="">
                             <div class="project-content">
-                                <a href="#" class="text-center">
+                                <a href="{% url 'posts:edutel' %}" class="text-center">
                                     <h4 class="text-secondary">Программирование на Python</h4>
-                                    <p class="m-0 text-white">Приложения для Telegram</p>
+                                    <p class="m-0 text-white">Python и разработка пиложений для Telegram</p>
                                 </a>
                             </div>
                         </div>
