--- a/bazadel/templates/posts/edu_tel.html
+++ b/bazadel/templates/posts/edu_tel.html
@@ -38,7 +38,8 @@
                         <p> Захватывающий мир программирования и разработки приложений ждет вас! Научитесь создавать функциональные и интерактивные боты для Telegram с помощью мощной библиотеки Aiogram. Благодаря этому курсу Вы сможете воплотить свои идеи в жизнь и создать собственные уникальные приложения для Telegram.
 
                         </p>
-                        <p>    Что Вы получите, пройдя наш курс? Во-первых, Вы освоите язык программирования Python, который является одним из самых популярных и востребованных в мире. Вы научитесь писать эффективный и чистый код, а также использовать различные инструменты и библиотеки для разработки приложений.
+                        <p>    Что Вы получите, пройдя наш курс? </p>
+                        <p> Во-первых, Вы освоите язык программирования Python, который является одним из самых популярных и востребованных в мире. Вы научитесь писать эффективный и чистый код, а также использовать различные инструменты и библиотеки для разработки приложений.
                         </p>
                         <p>    Во-вторых, Вы изучите библиотеку Aiogram - мощный инструмент для создания ботов для Telegram. Вы узнаете, как создавать и настраивать ботов, как обрабатывать сообщения и команды пользователей, а также как взаимодействовать с API Telegram.
                         </p>
@@ -53,7 +54,7 @@
                             Получите сертификат о прохождении курса и добавьте ценный актив к своему портфолио. Не упустите возможность стать востребованным специалистом в области разработки приложений для Telegram.
                         </p>
                     <h5 class="text-primary">
-                         Регистрируйтесь на наш курс "Python и разработка приложений для Telegram с помощью Aiogram" прямо сейчас и откройте для себя новые горизонты в программировании!
+                         Регистрируйтесь на наш курс "Python и разработка приложений для Telegram" прямо сейчас и откройте для себя новые горизонты в программировании!
                     </h5>
                     </div>
                 </div>
