рабочая программа для ДПО

--- a/bazadel/templates/includes/education.html
+++ b/bazadel/templates/includes/education.html
@@ -40,7 +40,7 @@
                             <div class="project-content">
                                 <a href="{% url 'posts:edutel' %}" class="text-center">
                                     <h4 class="text-secondary">Программирование на Python</h4>
-                                    <p class="m-0 text-white">Python и разработка пиложений для Telegram</p>
+                                    <p class="m-0 text-white">Python и разработка приложений для Telegram</p>
                                 </a>
                             </div>
                         </div>
