--- a/bazadel/templates/posts/edu_tel.html
+++ b/bazadel/templates/posts/edu_tel.html
@@ -56,6 +56,18 @@
                     <h5 class="text-primary">
                          Регистрируйтесь на наш курс "Python и разработка приложений для Telegram" прямо сейчас и откройте для себя новые горизонты в программировании!
                     </h5>
+                    <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Учебно-тематический план программы повышения квалификации
+                             <a href="{% static 'doc/curriculum2023.pdf' %}" class="text-primary">«Python и разработка приложений для Telegram»</a>
+                        </p>
+                      </div>
+                      <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Пример удостоверения программы повышения квалификации, которыое Вы получите по окончанию нашего курса
+                            <div class="h-100 position-relative">
+                                <img src="{% static 'img/dpo.jpg' %}" class="img-fluid w-50" alt="">
+                            </div>
+                        </p>
+                      </div>
                     </div>
                 </div>
             </div>
