--- a/bazadel/templates/posts/index.html
+++ b/bazadel/templates/posts/index.html
@@ -29,8 +29,8 @@
                               <h6 class="text-secondary h4 animated fadeInUp">Лучшие ИТ-решения</h6>
                               <h1 class="text-white display-1 mb-4 animated fadeInLeft">Качественные цифровые услуги, которые вам действительно нужны!</h1>
                               <p class="mb-4 text-white fs-5 animated fadeInDown">Наша цель повысить эффективность ваших бизнес-процессов. </p>
-                              <a href="" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Читать далее</button></a>
-                              <a href="" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Свяжитесь с нами</button></a>
+                              <a href="{% url 'posts:about' %}" class="me-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn1 animated fadeInLeft">Читать далее</button></a>
+                              <a href="#nav_order" class="ms-2"><button type="button" class="px-4 py-sm-3 px-sm-5 btn btn-primary rounded-pill carousel-content-btn2 animated fadeInRight">Свяжитесь с нами</button></a>
                           </div>
                       </div>
                   </div>
