--- a/bazadel/templates/posts/edu_db.html
+++ b/bazadel/templates/posts/edu_db.html
@@ -33,7 +33,7 @@
                             Захватите контроль над данными и создайте свою собственную базу данных с нашим курсом повышения квалификации
                         </h5>
                         <h1 class="mb-4">
-                            Информационная система на PostgreSQL !
+                            Информационная система на PostgreSQL!
                         </h1>
                         <p> Знание баз данных является одним из самых востребованных навыков в современном мире информационных технологий. Специалисты по базам данных могут найти работу в различных отраслях, включая IT, финансы, здравоохранение, телекоммуникации и многое другое.</p>
                             <p>    Базы данных предоставляют огромное количество информации, которую можно использовать для анализа и принятия важных бизнес-решений. </p>
@@ -57,6 +57,18 @@
                     <h5 class="text-primary">
                          Регистрируйтесь на наш курс прямо сейчас, и вместе мы создадим мощную информационную систему на PostgreSQL!
                     </h5>
+                    <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Учебно-тематический план программы повышения квалификации
+                             <a href="{% static 'doc/curriculum_db_2023.pdf' %}" class="text-primary">«Информационная система на PostgreSQL»</a>
+                        </p>
+                      </div>
+                      <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Пример удостоверения программы повышения квалификации, которыое Вы получите по окончанию нашего курса
+                            <div class="h-100 position-relative">
+                                <img src="{% static 'img/dpo.jpg' %}" class="img-fluid w-50" alt="">
+                            </div>
+                        </p>
+                      </div>
                     </div>
                 </div>
             </div>
