тематический план веб

--- a/bazadel/templates/posts/edu_web.html
+++ b/bazadel/templates/posts/edu_web.html
@@ -55,6 +55,18 @@
                     <h5 class="text-primary">
                         Регистрируйтесь на наш курс "Создай сайт своими руками за 72 часа" прямо сейчас и откройте для себя новые возможности в мире веб-разработки! 
                     </h5>
+                    <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Учебно-тематический план программы повышения квалификации
+                             <a href="{% static 'doc/curriculum_web_2023.pdf' %}" class="text-primary">«Создай сайт своими руками за 72 часа»</a>
+                        </p>
+                      </div>
+                      <div class="border-top mt-4 pt-3">
+                        <p class="mb-0">Пример удостоверения программы повышения квалификации, которыое Вы получите по окончанию нашего курса
+                            <div class="h-100 position-relative">
+                                <img src="{% static 'img/dpo.jpg' %}" class="img-fluid w-50" alt="">
+                            </div>
+                        </p>
+                      </div>
                     </div>
                 </div>
             </div>
