--- a/bazadel/templates/includes/footer.html
+++ b/bazadel/templates/includes/footer.html
@@ -5,7 +5,7 @@
             <div class="container pt-5 pb-4">
                 <div class="row g-5">
                     <div class="col-lg-3 col-md-6">
-                        <a href="index.html">
+                        <a href="{% url 'posts:index' %}">
                             <h1 class="text-white fw-bold d-block">База<span class="text-secondary">Дел</span> </h1>
                         </a>
                         <p class="mt-4 text-light">Мы создаем индивидуальные решения, оптимизируя Ваш бизнес и повышая его эффективность. Разработка баз данных - это наша специализация!</p>
@@ -43,15 +43,15 @@
                         <a href="#" class="h3 text-secondary">Помощь</a>
                         <div class="mt-4 d-flex flex-column help-link">
                             <a href="{% static 'doc/police.pdf' %}" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Конфиденциальность</a>
-                            <a href="#nav_order" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Техподдержка</a>
+                            <a href="{% url 'posts:index' %}#nav_order" class="mb-2 text-white"><i class="fas fa-angle-right text-secondary me-2"></i>Техподдержка</a>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6">
-                        <a href="#nav_order" class="h3 text-secondary">Свяжитесь с нами</a>
+                        <a href="{% url 'posts:index' %}#nav_order" class="h3 text-secondary">Свяжитесь с нами</a>
                         <div class="text-white mt-4 d-flex flex-column contact-link">
-                            <a href="#nav_order" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Россия, Севастополь, ул. Университетская, 31</a>
-                            <a href="#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +7 978 572 93 71</a>
-                            <a href="#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>basedeal@yandex.ru</a>
+                            <a href="{% url 'posts:index' %}#nav_order" class="pb-3 text-light border-bottom border-primary"><i class="fas fa-map-marker-alt text-secondary me-2"></i> Россия, Севастополь, ул. Университетская, 31</a>
+                            <a href="{% url 'posts:index' %}#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-phone-alt text-secondary me-2"></i> +7 978 572 93 71</a>
+                            <a href="{% url 'posts:index' %}#nav_order" class="py-3 text-light border-bottom border-primary"><i class="fas fa-envelope text-secondary me-2"></i>basedeal@yandex.ru</a>
                         </div>
                     </div>
                 </div>
