--- a/bazadel/templates/posts/edu_tel.html
+++ b/bazadel/templates/posts/edu_tel.html
@@ -32,6 +32,7 @@
                         <h5 class="text-primary">
                             Хотите научиться программировать на Python и создавать уникальные приложения для Telegram? Присоединяйтесь к нашему курсу 
                         </h5>
+                        <a href="{% url 'posts:index' %}#nav_order" class="ms-2"><button type="button" class="px-0 py-sm-3 px-sm-5 btn btn-primary rounded-pill">Зарегистрироваться на курс</button></a>
                         <h1 class="mb-4">
                             Python и разработка приложений для Telegram!
                         </h1>
