--- a/bazadel/templates/posts/edu_web.html
+++ b/bazadel/templates/posts/edu_web.html
@@ -32,6 +32,7 @@
                         <h5 class="text-primary">
                             Хотите освоить новую навык и создать свой собственный сайт, но не знаете, с чего начать? Мы предлагаем Вам уникальный курс повышения квалификации
                         </h5>
+                        <a href="{% url 'posts:index' %}#nav_order" class="ms-2"><button type="button" class="px-0 py-sm-3 px-sm-5 btn btn-primary rounded-pill">Зарегистрироваться на курс</button></a>
                         <h1 class="mb-4">
                             Создай сайт своими руками за 72 ч!
                         </h1>
