--- a/bazadel/templates/includes/head.html
+++ b/bazadel/templates/includes/head.html
@@ -5,6 +5,13 @@
 <meta content="" name="keywords">
 <meta content="" name="description">
 
+
+<link rel="shortcut icon" type="image/svg+xml" href="{% static 'img/fav/fav.svg' %}" >
+<link rel="icon" href="{% static 'img/fav/favicon.ico' %}" type="image">
+<link rel="icon" type="image" sizes="32x32" href="{% static 'img/fav/fav_32.ico' %}">
+<link rel="icon" type="image" sizes="16x16" href="{% static 'img/fav/fav_16.ico' %}">
+<link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
+
 <!-- Google Web Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
